--- a/config/kernel/linux-sunxi-current.config
+++ b/config/kernel/linux-sunxi-current.config
@@ -2649,6 +2649,7 @@ CONFIG_WLAN_VENDOR_TI=y
 # CONFIG_WLCORE is not set
 CONFIG_RTL8822BS=m
 CONFIG_RTL8723DU=m
+CONFIG_RTL8723BU=m
 CONFIG_RTL8723DS=m
 CONFIG_RTL8822BU=m
 CONFIG_RTL8188EU=m
@@ -6046,6 +6047,7 @@ CONFIG_FB_TFT_SSD1331=m
 CONFIG_FB_TFT_SSD1351=m
 CONFIG_FB_TFT_ST7735R=m
 CONFIG_FB_TFT_ST7789V=m
+CONFIG_FB_TFT_ST7789VW=m
 CONFIG_FB_TFT_TINYLCD=m
 CONFIG_FB_TFT_TLS8204=m
 CONFIG_FB_TFT_UC1611=m
