add tft st7789vw drm

--- a/config/boards/h3-zero.conf
+++ b/config/boards/h3-zero.conf
@@ -3,8 +3,8 @@ BOARD_NAME="H3-Zero"
 BOARDFAMILY="sun8i"
 BOOTCONFIG="h3-zero_defconfig"
 MODULES="g_serial"
-MODULES_BLACKLIST="rtl8xxxu"
-DEFAULT_OVERLAYS="spi-st7789vw"
+MODULES_BLACKLIST="rtl8xxxu fb_st7789vw"
+DEFAULT_OVERLAYS="spi-drm-st7789vw"
 DEFAULT_CONSOLE="serial"
 SERIALCON="ttyS0,ttyGS0"
 # BUILD_DESKTOP="no"
