update st7789v drm driver

--- a/config/boards/h3-zero.conf
+++ b/config/boards/h3-zero.conf
@@ -4,7 +4,7 @@ BOARDFAMILY="sun8i"
 BOOTCONFIG="h3-zero_defconfig"
 MODULES="g_serial"
 MODULES_BLACKLIST="rtl8xxxu fb_st7789vw"
-DEFAULT_OVERLAYS="spi-drm-st7789vw"
+DEFAULT_OVERLAYS="spi-st7789v_240x135"
 DEFAULT_CONSOLE="serial"
 SERIALCON="ttyS0,ttyGS0"
 # BUILD_DESKTOP="no"
